# Grupo1IA

./: .readthedocs.yaml  CITATION.cff  DiagramaGrupo1.drawio.xml  Dockerfile  Ejecucion.txt  Evaluation_Metrics.json  NER_Extraction.py  NER_results.txt  README.md  Text_Ext.py  Text_Extraction.py  Text_Extraction_results.json  Text_Extraction_results_detailed.json  app.py  codemeta.json  dict_to_rdf.py  extract_abstracts.py  knowledge_graph_linked.rdf  mkdocs.yml  pyproject.toml  similarity_analysis.py  similarity_data.rdf
docs/: index.md  install.md  rationale.md  usage.md
entrenamiento/: Testing_Models.py  Text_Extraction_results_detailed.json
output_files/: knowledge_graph_linked.rdf  similarity_data.rdf
output_xml/: 107 35515 IJECE 25_ Faizah.xml  2206.02983v2.xml  2405.17044v3.xml  2412.19437v2.xml  2504.11011v1.xml  2504.12897v1.xml  2504.18560v1.xml  2504.20484v1.xml  2505.00912v1.xml  2505.02271v1.xml  2505.07105v1.xml  2505.09489v1.xml  2505.09794v1.xml  2505.09993v1.xml  2505.10037v1.xml  2505.10294v1.xml  2505.10325v1.xml  2505.10375v1.xml  2505.10427v1.xml  2505.10450v1.xml  2505.10454v1.xml  2505.10463v1.xml  2505.10464v1.xml  2505.10468v1.xml  2505.10490v1.xml  2505.10530v1.xml  2505.10545v1.xml  2505.10551v1.xml  2505.10556v1.xml  2505.10558v1.xml  2505.10559v1.xml  2505.10566v1.xml  A-Review-on-Python-Libraries-and-IDEs-for-Data-Science.xml  Artificial Intelligence in Education.xml  Breast cancer detection through attention based feature integration model.xml  Classification of Breast Cancer Tumors from Histopathological Images.xml  Machine Learning Algorithms.xml  SROC II (39).xml  The rsync algorithm.xml
papersXML/: 1906.06843v2.xml  2010.02462v1.xml  2206.02983v2.xml  2212.07286v2.xml  2401.00775v2.xml  2402.08640v3.xml  2405.17044v3.xml  2502.12102v1.xml  2502.12150v1.xml  2502.13138v1.xml  A-Review-on-Python-Libraries-and-IDEs-for-Data-Science.pdf.tei.xml  Arjun Suresh - Measuring Changes in Myocardial Perfusion in Left-Sided Breast Cancer Patients.xml  Artificial Intelligence in Education.pdf.tei.xml  Blockchain for the Metaverse.pdf.tei.xml  Blockchain_technology_innovations.pdf.tei.xml  Breast cancer detection through attention based feature integration model.xml  IJBB-V18-No3-p11-20.xml  Leveraging Artificial Intelligence in Business.pdf.tei.xml  LoremIpsum.xml  Machine Learning Algorithms.pdf.tei.xml  Machine learning algorithms for breast cancer analysis.xml  THE BEES ALGORITHM.pdf.tei.xml  Transparent precision explainable artificial intelligence empowered breast cancer recommendations for personalized treatment.xml  WJARR-2024-0625.xml  WJBPHS-2024-0113.xml  What an Algorithm Is.pdf.tei.xml  grobid_output_2502.09233v1.xml  grobid_output_2502.09235v1.xml  grobid_output_2502.09242v1.xml  grobid_output_2502.09294v1.xml  grobid_output_2502.09378v1.xml  grobid_output_2502.09432v1.xml  script.py  (+5 more)
(+58 files in other folders)
