[project]
name = "GRUPO1IA"
version = "1.0.0"
description = "his repository provides a complete pipeline for the advanced analysis of scientific articles."
authors = [
    { name = "fran2410", email = "franciscochicotemartin@gmail.com" },
    { name = "Angel-Astiazaran", email = "asga.angel@gmail.com" }
]
license = { text = "http://www.apache.org/licenses/LICENSE-2.0.html" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "networkx",
    "plotly",
    "rdflib",
    "nltk",
    "torch",
    "transformers",
    "lxml",
    "seaborn",
    "scipy",
    "scikit-learn",
    "sentence-transformers",
    "keybert", 
    "streamlit",
    "streamlit-agraph"

]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "scripts" }
]
